[gd_scene load_steps=55 format=2]

[ext_resource path="res://assets/fonts/Vision-Light.otf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/hud.gd" type="Script" id=2]
[ext_resource path="res://assets/icons/Reset_Rotation_Normal.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/Reset_Rotation_Pressed.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/Reset_Rotation_Hover.png" type="Texture" id=5]
[ext_resource path="res://assets/icons/Hide_GUI_Normal.png" type="Texture" id=6]
[ext_resource path="res://assets/icons/Hide_GUI_Pressed.png" type="Texture" id=7]
[ext_resource path="res://assets/icons/Hide_GUI_Hover.png" type="Texture" id=8]
[ext_resource path="res://assets/icons/modes/Mode_Place_Normal.png" type="Texture" id=9]
[ext_resource path="res://assets/icons/modes/Mode_Place_Active.png" type="Texture" id=10]
[ext_resource path="res://assets/icons/modes/Mode_Place_Hover.png" type="Texture" id=11]
[ext_resource path="res://assets/icons/modes/Mode_Rotate_Normal.png" type="Texture" id=12]
[ext_resource path="res://assets/icons/modes/Mode_Rotate_Active.png" type="Texture" id=13]
[ext_resource path="res://assets/icons/modes/Mode_Rotate_Hover.png" type="Texture" id=14]
[ext_resource path="res://assets/icons/modes/Mode_Move_Normal.png" type="Texture" id=15]
[ext_resource path="res://assets/icons/modes/Mode_Move_Active.png" type="Texture" id=16]
[ext_resource path="res://assets/icons/modes/Mode_Move_Hover.png" type="Texture" id=17]
[ext_resource path="res://assets/icons/modes/Mode_Zoom_Normal.png" type="Texture" id=18]
[ext_resource path="res://assets/icons/modes/Mode_Zoom_Active.png" type="Texture" id=19]
[ext_resource path="res://assets/icons/modes/Mode_Zoom_Hover.png" type="Texture" id=20]
[ext_resource path="res://assets/icons/atoms/H_Normal.png" type="Texture" id=21]
[ext_resource path="res://assets/icons/atoms/H_Pressed.png" type="Texture" id=22]
[ext_resource path="res://assets/icons/atoms/H_Hover.png" type="Texture" id=23]
[ext_resource path="res://assets/icons/atoms/H_Locked.png" type="Texture" id=24]
[ext_resource path="res://assets/icons/atoms/C_Normal.png" type="Texture" id=25]
[ext_resource path="res://assets/icons/atoms/C_Pressed.png" type="Texture" id=26]
[ext_resource path="res://assets/icons/atoms/C_Hover.png" type="Texture" id=27]
[ext_resource path="res://assets/icons/atoms/C_Locked.png" type="Texture" id=28]
[ext_resource path="res://assets/icons/atoms/O_Normal.png" type="Texture" id=29]
[ext_resource path="res://assets/icons/atoms/O_Pressed.png" type="Texture" id=30]
[ext_resource path="res://assets/icons/atoms/O_Hover.png" type="Texture" id=31]
[ext_resource path="res://assets/icons/atoms/O_Locked.png" type="Texture" id=32]
[ext_resource path="res://assets/icons/atoms/N_Normal.png" type="Texture" id=33]
[ext_resource path="res://assets/icons/atoms/N_Pressed.png" type="Texture" id=34]
[ext_resource path="res://assets/icons/atoms/N_Hover.png" type="Texture" id=35]
[ext_resource path="res://assets/icons/atoms/N_Locked.png" type="Texture" id=36]
[ext_resource path="res://assets/icons/atoms/Cl_Normal.png" type="Texture" id=37]
[ext_resource path="res://assets/icons/atoms/Cl_Pressed.png" type="Texture" id=38]
[ext_resource path="res://assets/icons/atoms/Cl_Hover.png" type="Texture" id=39]
[ext_resource path="res://assets/icons/atoms/Cl_Locked.png" type="Texture" id=40]
[ext_resource path="res://assets/icons/atoms/Place_Normal.png" type="Texture" id=41]
[ext_resource path="res://assets/icons/atoms/Place_Pressed.png" type="Texture" id=42]
[ext_resource path="res://assets/icons/atoms/Place_Hover.png" type="Texture" id=43]
[ext_resource path="res://assets/icons/atoms/Place_Locked.png" type="Texture" id=44]
[ext_resource path="res://assets/icons/atoms/Delete_Normal.png" type="Texture" id=45]
[ext_resource path="res://assets/icons/atoms/Delete_Pressed.png" type="Texture" id=46]
[ext_resource path="res://assets/icons/atoms/Delete_Hover.png" type="Texture" id=47]
[ext_resource path="res://assets/icons/atoms/Delete_Locked.png" type="Texture" id=48]
[ext_resource path="res://assets/icons/atoms/Rotate_Normal.png" type="Texture" id=49]
[ext_resource path="res://assets/icons/atoms/Rotate_Pressed.png" type="Texture" id=50]
[ext_resource path="res://assets/icons/atoms/Rotate_Hover.png" type="Texture" id=51]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.168627, 0.172549, 0.219608, 1 )

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )
WindowDialog/colors/title_color = Color( 0, 0, 0, 1 )
WindowDialog/constants/close_h_ofs = 18
WindowDialog/constants/close_v_ofs = 18
WindowDialog/constants/scaleborder_size = 4
WindowDialog/constants/title_height = 20
WindowDialog/fonts/title_font = null
WindowDialog/icons/close = null
WindowDialog/icons/close_highlight = null
WindowDialog/styles/panel = SubResource( 3 )

[node name="HUD" type="Control"]
margin_right = 1024.0
margin_bottom = 600.0
theme = SubResource( 2 )
script = ExtResource( 2 )

[node name="GUI_Control" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -110.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 58.0

[node name="Reset_Mode" type="TextureButton" parent="GUI_Control"]
margin_right = 48.0
margin_bottom = 48.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="Hide" type="TextureButton" parent="GUI_Control"]
margin_left = 52.0
margin_right = 100.0
margin_bottom = 48.0
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="UI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Info" type="VBoxContainer" parent="UI"]
margin_left = 10.0
margin_top = 10.0
margin_right = 87.0
margin_bottom = 94.0

[node name="Conns" type="Label" parent="UI/Info"]
margin_right = 77.0
margin_bottom = 24.0
text = "0 / 0"

[node name="Active" type="Label" parent="UI/Info"]
margin_top = 28.0
margin_right = 77.0
margin_bottom = 52.0
text = "0 / 0"

[node name="Rotation" type="Label" parent="UI/Info"]
margin_top = 56.0
margin_right = 77.0
margin_bottom = 80.0
text = "0"

[node name="Mode_Select" type="HBoxContainer" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 390.0
margin_top = 10.0
margin_right = 594.0
margin_bottom = 58.0

[node name="Place" type="TextureButton" parent="UI/Mode_Select"]
margin_right = 48.0
margin_bottom = 48.0
toggle_mode = true
pressed = true
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 11 )

[node name="Rotate" type="TextureButton" parent="UI/Mode_Select"]
margin_left = 52.0
margin_right = 100.0
margin_bottom = 48.0
toggle_mode = true
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 14 )

[node name="Move" type="TextureButton" parent="UI/Mode_Select"]
margin_left = 104.0
margin_right = 152.0
margin_bottom = 48.0
toggle_mode = true
texture_normal = ExtResource( 15 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 17 )

[node name="Zoom" type="TextureButton" parent="UI/Mode_Select"]
margin_left = 156.0
margin_right = 204.0
margin_bottom = 48.0
toggle_mode = true
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 20 )

[node name="Atom_Auswahl" type="HBoxContainer" parent="UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 296.0
margin_top = 475.0
margin_right = 687.0
margin_bottom = 550.0

[node name="Wasserstoff" type="TextureButton" parent="UI/Atom_Auswahl"]
margin_right = 75.0
margin_bottom = 75.0
texture_normal = ExtResource( 21 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 23 )
texture_disabled = ExtResource( 24 )

[node name="Kohlenstoff" type="TextureButton" parent="UI/Atom_Auswahl"]
margin_left = 79.0
margin_right = 154.0
margin_bottom = 75.0
texture_normal = ExtResource( 25 )
texture_pressed = ExtResource( 26 )
texture_hover = ExtResource( 27 )
texture_disabled = ExtResource( 28 )

[node name="Sauerstoff" type="TextureButton" parent="UI/Atom_Auswahl"]
margin_left = 158.0
margin_right = 233.0
margin_bottom = 75.0
texture_normal = ExtResource( 29 )
texture_pressed = ExtResource( 30 )
texture_hover = ExtResource( 31 )
texture_disabled = ExtResource( 32 )

[node name="Stickstoff" type="TextureButton" parent="UI/Atom_Auswahl"]
margin_left = 237.0
margin_right = 312.0
margin_bottom = 75.0
texture_normal = ExtResource( 33 )
texture_pressed = ExtResource( 34 )
texture_hover = ExtResource( 35 )
texture_disabled = ExtResource( 36 )

[node name="Chlor" type="TextureButton" parent="UI/Atom_Auswahl"]
margin_left = 316.0
margin_right = 391.0
margin_bottom = 75.0
texture_normal = ExtResource( 37 )
texture_pressed = ExtResource( 38 )
texture_hover = ExtResource( 39 )
texture_disabled = ExtResource( 40 )

[node name="Atom_Platzieren" type="HBoxContainer" parent="UI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 820.0
margin_top = 475.0
margin_right = 974.0
margin_bottom = 550.0

[node name="Place" type="TextureButton" parent="UI/Atom_Platzieren"]
margin_right = 75.0
margin_bottom = 75.0
texture_normal = ExtResource( 41 )
texture_pressed = ExtResource( 42 )
texture_hover = ExtResource( 43 )
texture_disabled = ExtResource( 44 )

[node name="Delete" type="TextureButton" parent="UI/Atom_Platzieren"]
margin_left = 79.0
margin_right = 154.0
margin_bottom = 75.0
disabled = true
texture_normal = ExtResource( 45 )
texture_pressed = ExtResource( 46 )
texture_hover = ExtResource( 47 )
texture_disabled = ExtResource( 48 )

[node name="Atom_Drehen" type="HBoxContainer" parent="UI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 475.0
margin_right = 164.0
margin_bottom = 550.0

[node name="Rotate" type="TextureButton" parent="UI/Atom_Drehen"]
margin_right = 75.0
margin_bottom = 75.0
texture_normal = ExtResource( 49 )
texture_pressed = ExtResource( 50 )
texture_hover = ExtResource( 51 )

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -306.5
margin_top = -83.0
margin_right = 306.5
margin_bottom = 83.0
popup_exclusive = true
window_title = ""
resizable = true
dialog_text = "Diese Aktion setzt das Molekül zurück,
wobei alle zusammenhängende Atome gelöscht werden...
 
Fortfahren?"
